[APPDEV-5494] Mobile Web(Current Platform) - Home Page    add html5 ver of no nav template    make create act use templates    add branding to login/create act via mobileWeb template    fix unreported errors in create act/social    remove spacing/lines from nav    fix horiz over-scroll
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@55900 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/styles.css
+++ b/projects/Media/docroot/assets/css/common/styles.css
@@ -186,7 +186,7 @@ form {
 
 .error {
 	color: red;
-	background: url(img/right-facing-error-arrow.png) no-repeat 0 center;
+	/*background: url(img/right-facing-error-arrow.png) no-repeat 0 center;*/
 	text-decoration: none;
 }
 
